--- a/modeloSeleccionado/testModel.ipynb
+++ b/modeloSeleccionado/testModel.ipynb
@@ -43,26 +43,26 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>haveIp</th>\n",
        "      <th>lengthUrl</th>\n",
-       "      <th>haveAtSymbol</th>\n",
-       "      <th>sslState</th>\n",
        "      <th>domainAge</th>\n",
-       "      <th>slashDouble</th>\n",
        "      <th>anchorUrl</th>\n",
-       "      <th>prefixSuffix</th>\n",
-       "      <th>linksInTags</th>\n",
-       "      <th>clicRigth</th>\n",
-       "      <th>...</th>\n",
-       "      <th>webTraffic</th>\n",
-       "      <th>shorterService</th>\n",
+       "      <th>abnormalURL</th>\n",
+       "      <th>requestUrl</th>\n",
        "      <th>domainRegisterAge</th>\n",
        "      <th>httpsToken</th>\n",
-       "      <th>emailInformation</th>\n",
-       "      <th>pageRank</th>\n",
-       "      <th>staticalInform</th>\n",
        "      <th>haveSubdomain</th>\n",
-       "      <th>linksToPage</th>\n",
+       "      <th>hasMD5</th>\n",
+       "      <th>hasSHA1</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Columna12</th>\n",
+       "      <th>Columna5</th>\n",
+       "      <th>Columna6</th>\n",
+       "      <th>Columna7</th>\n",
+       "      <th>Columna8</th>\n",
+       "      <th>Columna3</th>\n",
+       "      <th>Columna4</th>\n",
+       "      <th>Columna2</th>\n",
+       "      <th>Columna1</th>\n",
        "      <th>result</th>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -92,45 +92,21 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>23169</th>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <th>6308</th>\n",
+       "      <td>0</td>\n",
        "      <td>-1</td>\n",
        "      <td>-1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>-1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23075</th>\n",
-       "      <td>1</td>\n",
        "      <td>-1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>-1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>...</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>-1</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -140,116 +116,140 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>18502</th>\n",
+       "      <th>756</th>\n",
        "      <td>-1</td>\n",
        "      <td>-1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "      <td>-1</td>\n",
        "      <td>-1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>-1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>-1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1959</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>-1</td>\n",
        "      <td>-1</td>\n",
        "      <td>-1</td>\n",
        "      <td>...</td>\n",
-       "      <td>-1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>29191</th>\n",
-       "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>1</td>\n",
+       "      <th>6977</th>\n",
        "      <td>1</td>\n",
        "      <td>-1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
        "      <td>...</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1482</th>\n",
+       "      <td>1</td>\n",
        "      <td>-1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
        "      <td>-1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>985</th>\n",
+       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 31 columns</p>\n",
+       "<p>5 rows × 30 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       haveIp  lengthUrl  haveAtSymbol  sslState  domainAge  slashDouble  \\\n",
-       "Ord.                                                                       \n",
-       "23169       1         -1             1         1          1            1   \n",
-       "23075       1         -1             1         1          1            1   \n",
-       "18502      -1         -1             1         1         -1            1   \n",
-       "1959        1          1             1         1          1            1   \n",
-       "29191      -1         -1             1         1         -1            1   \n",
+       "      lengthUrl  domainAge  anchorUrl  abnormalURL  requestUrl   \n",
+       "Ord.                                                             \n",
+       "6308          0         -1         -1           -1          -1  \\\n",
+       "756          -1         -1         -1           -1          -1   \n",
+       "6977          1         -1         -1           -1          -1   \n",
+       "1482          1         -1         -1           -1          -1   \n",
+       "985           0         -1         -1           -1           1   \n",
        "\n",
-       "       anchorUrl  prefixSuffix  linksInTags  clicRigth  ...  webTraffic  \\\n",
-       "Ord.                                                    ...               \n",
-       "23169          1            -1           -1          1  ...           1   \n",
-       "23075          1            -1            1          1  ...           1   \n",
-       "18502          0            -1           -1          1  ...           1   \n",
-       "1959           1            -1           -1         -1  ...          -1   \n",
-       "29191          1             1            0          1  ...           1   \n",
+       "      domainRegisterAge  httpsToken  haveSubdomain  hasMD5  hasSHA1  ...   \n",
+       "Ord.                                                                 ...   \n",
+       "6308                 -1           1              0      -1       -1  ...  \\\n",
+       "756                  -1           1             -1      -1       -1  ...   \n",
+       "6977                 -1           1              0      -1       -1  ...   \n",
+       "1482                 -1           1              0      -1       -1  ...   \n",
+       "985                  -1           1             -1      -1       -1  ...   \n",
        "\n",
-       "       shorterService  domainRegisterAge  httpsToken  emailInformation  \\\n",
-       "Ord.                                                                     \n",
-       "23169               1                  1           1                 1   \n",
-       "23075               1                 -1           1                 1   \n",
-       "18502               1                 -1           1                 1   \n",
-       "1959                1                  1           1                -1   \n",
-       "29191               1                 -1           1                 1   \n",
+       "      Columna12  Columna5  Columna6  Columna7  Columna8  Columna3  Columna4   \n",
+       "Ord.                                                                          \n",
+       "6308          1         1         1         1         1         1         1  \\\n",
+       "756           1         1         1         1         1         1         1   \n",
+       "6977          1         1         1         1         1         1         1   \n",
+       "1482          1         1         1         1         1         1         1   \n",
+       "985           1         1         1         1         1         1         1   \n",
        "\n",
-       "       pageRank  staticalInform  haveSubdomain  linksToPage  result  \n",
-       "Ord.                                                                 \n",
-       "23169        -1               1              1            0       1  \n",
-       "23075         1               1              1            1       1  \n",
-       "18502        -1               1              0            1      -1  \n",
-       "1959         -1               1              0           -1       1  \n",
-       "29191        -1               1              0            1       1  \n",
+       "      Columna2  Columna1  result  \n",
+       "Ord.                              \n",
+       "6308         1         1       1  \n",
+       "756          1         1       1  \n",
+       "6977         1         1       1  \n",
+       "1482         1         1       1  \n",
+       "985          1         1       1  \n",
        "\n",
-       "[5 rows x 31 columns]"
+       "[5 rows x 30 columns]"
       ]
      },
      "execution_count": 2,
@@ -259,7 +259,7 @@
    ],
    "source": [
     "#Leemos el dataset con las primeras 10 características\n",
-    "df = pd.read_csv(\"dataset-phishing-legitime3.csv\",index_col=0)\n",
+    "df = pd.read_csv(\"complete.csv\",index_col=0)\n",
     "df = sklearn.utils.shuffle(df)\n",
     "X = df.drop(\"result\",axis=1).values\n",
     "X = preprocessing.scale(X)\n",
@@ -289,10 +289,18 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/sklearn/model_selection/_split.py:700: UserWarning: The least populated class in y has only 1 members, which is less than n_splits=10.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'fit_time': 1.5124489545822144, 'score_time': 0.06701922416687012, 'test_accuracy': 0.9589619488684822, 'test_recall': 0.9720397056225968, 'test_precision': 0.9643371563551625, 'test_f1': 0.9681687004975211}\n"
+      "{'fit_time': 0.06679208278656006, 'score_time': 0.004306864738464355, 'test_accuracy': 0.99985835694051, 'test_recall': 1.0, 'test_precision': 0.99985835694051, 'test_f1': 0.9999291282778172}\n"
      ]
     }
    ],
@@ -321,7 +329,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4,
   "vscode": {
