--- a/selección modelo/Modelos 30 características.ipynb
+++ b/selección modelo/Modelos 30 características.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "66c31b79",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 58,
    "id": "0e6c2dd2",
    "metadata": {
     "scrolled": true
@@ -58,14 +58,14 @@
        "      <th>linksInTags</th>\n",
        "      <th>clicRigth</th>\n",
        "      <th>...</th>\n",
-       "      <th>hasSHA1</th>\n",
-       "      <th>hasYara</th>\n",
-       "      <th>hasSHA256</th>\n",
-       "      <th>hasShort</th>\n",
-       "      <th>hasDateTime</th>\n",
-       "      <th>hasDomain</th>\n",
-       "      <th>hasHostname</th>\n",
-       "      <th>hasIPDst</th>\n",
+       "      <th>shorterService</th>\n",
+       "      <th>domainRegisterAge</th>\n",
+       "      <th>httpsToken</th>\n",
+       "      <th>emailInformation</th>\n",
+       "      <th>pageRank</th>\n",
+       "      <th>staticalInform</th>\n",
+       "      <th>haveSubdomain</th>\n",
+       "      <th>linksToPage</th>\n",
        "      <th>hasIPSrc</th>\n",
        "      <th>result</th>\n",
        "    </tr>\n",
@@ -108,14 +108,14 @@
        "      <td>0</td>\n",
        "      <td>-1</td>\n",
        "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>1</td>\n",
        "      <td>-1</td>\n",
        "      <td>-1</td>\n",
+       "      <td>1</td>\n",
        "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
+       "      <td>1</td>\n",
        "      <td>-1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -132,12 +132,12 @@
        "      <td>0</td>\n",
        "      <td>-1</td>\n",
        "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>1</td>\n",
        "      <td>-1</td>\n",
        "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
+       "      <td>1</td>\n",
        "      <td>-1</td>\n",
        "      <td>-1</td>\n",
        "      <td>-1</td>\n",
@@ -156,12 +156,12 @@
        "      <td>-1</td>\n",
        "      <td>-1</td>\n",
        "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>1</td>\n",
        "      <td>-1</td>\n",
        "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
+       "      <td>1</td>\n",
        "      <td>-1</td>\n",
        "      <td>-1</td>\n",
        "      <td>-1</td>\n",
@@ -180,13 +180,13 @@
        "      <td>-1</td>\n",
        "      <td>-1</td>\n",
        "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>1</td>\n",
        "      <td>-1</td>\n",
        "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>-1</td>\n",
        "      <td>-1</td>\n",
        "      <td>1</td>\n",
@@ -204,20 +204,20 @@
        "      <td>1</td>\n",
        "      <td>-1</td>\n",
        "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>1</td>\n",
        "      <td>-1</td>\n",
        "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>-1</td>\n",
        "      <td>-1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 41 columns</p>\n",
+       "<p>5 rows × 32 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -229,40 +229,40 @@
        "3          1         -1             1         1         -1            1   \n",
        "4          1          1             1         1         -1            1   \n",
        "\n",
-       "      anchorUrl  prefixSuffix  linksInTags  clicRigth  ...  hasSHA1  hasYara   \n",
-       "Ord.                                                   ...                     \n",
-       "0            -1             1            0         -1  ...       -1       -1  \\\n",
-       "1            -1             1            0         -1  ...       -1       -1   \n",
-       "2            -1             1           -1         -1  ...       -1       -1   \n",
-       "3            -1            -1           -1         -1  ...       -1       -1   \n",
-       "4            -1             1            1         -1  ...       -1       -1   \n",
+       "      anchorUrl  prefixSuffix  linksInTags  clicRigth  ...  shorterService   \n",
+       "Ord.                                                   ...                   \n",
+       "0            -1             1            0         -1  ...               1  \\\n",
+       "1            -1             1            0         -1  ...               1   \n",
+       "2            -1             1           -1         -1  ...               1   \n",
+       "3            -1            -1           -1         -1  ...               1   \n",
+       "4            -1             1            1         -1  ...               1   \n",
        "\n",
-       "      hasSHA256  hasShort  hasDateTime  hasDomain  hasHostname  hasIPDst   \n",
-       "Ord.                                                                       \n",
-       "0            -1        -1           -1         -1           -1        -1  \\\n",
-       "1            -1        -1           -1         -1           -1        -1   \n",
-       "2            -1        -1           -1         -1           -1        -1   \n",
-       "3            -1        -1           -1         -1           -1        -1   \n",
-       "4            -1        -1           -1         -1           -1        -1   \n",
+       "      domainRegisterAge  httpsToken  emailInformation  pageRank   \n",
+       "Ord.                                                              \n",
+       "0                    -1           1                -1        -1  \\\n",
+       "1                    -1           1                -1        -1   \n",
+       "2                    -1           1                -1        -1   \n",
+       "3                    -1           1                -1        -1   \n",
+       "4                    -1           1                -1        -1   \n",
        "\n",
-       "      hasIPSrc  result  \n",
-       "Ord.                    \n",
-       "0           -1       1  \n",
-       "1           -1       1  \n",
-       "2           -1       1  \n",
-       "3           -1       1  \n",
-       "4           -1       1  \n",
+       "      staticalInform  haveSubdomain  linksToPage  hasIPSrc  result  \n",
+       "Ord.                                                                \n",
+       "0                  1             -1            1        -1       1  \n",
+       "1                  1             -1           -1        -1       1  \n",
+       "2                  1             -1           -1        -1       1  \n",
+       "3                  0              1           -1        -1       1  \n",
+       "4                  1              0           -1        -1       1  \n",
        "\n",
-       "[5 rows x 41 columns]"
+       "[5 rows x 32 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"/Users/denniscaisa/Desktop/DENNIS/TITULACION/Codigo DA/ids-phishing-main/Dataset_Legitime_40Features.csv\",index_col=0)\n",
+    "df = pd.read_csv(\"/Users/denniscaisa/Desktop/DENNIS/TITULACION/Documentos/Separacion de Caracteristicas/30Features/Dataset_Legitime_AllFeatures_30x10.csv\",index_col=0)\n",
     "#df = sklearn.utils.shuffle(df)\n",
     "X = df.drop(\"result\",axis=1).values\n",
     "X = preprocessing.scale(X)\n",
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 59,
    "id": "29f5b617",
    "metadata": {},
    "outputs": [],
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 60,
    "id": "10c67c09",
    "metadata": {},
    "outputs": [],
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 61,
    "id": "3702abac",
    "metadata": {},
    "outputs": [
@@ -305,7 +305,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'fit_time': 0.27738907337188723, 'score_time': 0.006105703115463257, 'test_accuracy': 0.8392382794510453, 'test_recall': 0.9625045760468588, 'test_precision': 0.8558608703743932, 'test_f1': 0.9053102081008004}\n"
+      "{'fit_time': 0.2558645820617676, 'score_time': 0.0048579049110412595, 'test_accuracy': 0.8280008096229472, 'test_recall': 0.9609292893669549, 'test_precision': 0.8463805741967563, 'test_f1': 0.8993721488548435}\n"
      ]
     }
    ],
@@ -313,14 +313,14 @@
     "#Random Forest\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "rforest_clf = RandomForestClassifier()\n",
-    "cross_val_scores = cross_validate(rforest_clf, X, y, cv=1200, scoring = scoring)\n",
+    "cross_val_scores = cross_validate(rforest_clf, X, y, cv=100, scoring = scoring)\n",
     "rforest_clf_score = mean_score(cross_val_scores)\n",
     "print(rforest_clf_score)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "e44e202c",
    "metadata": {},
    "outputs": [
@@ -328,7 +328,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'fit_time': 6.055236458778381, 'score_time': 0.0059108734130859375, 'test_accuracy': 0.7985950674294116, 'test_recall': 0.9116971124995586, 'test_precision': 0.8470030538578681, 'test_f1': 0.8745444828619021}\n"
+      "{'fit_time': 1.15136661529541, 'score_time': 0.003896784782409668, 'test_accuracy': 0.8230080068113296, 'test_recall': 0.9778016493250716, 'test_precision': 0.8320112365479003, 'test_f1': 0.898587185996746}\n"
      ]
     }
    ],
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "41bef061",
    "metadata": {},
    "outputs": [
@@ -351,7 +351,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'fit_time': 0.011157989501953125, 'score_time': 0.0018081426620483398, 'test_accuracy': 0.8038469433574956, 'test_recall': 0.9144519186668706, 'test_precision': 0.8509722882752658, 'test_f1': 0.8781439449697104}\n"
+      "{'fit_time': 0.005398154258728027, 'score_time': 0.0033328056335449217, 'test_accuracy': 0.8273619510260731, 'test_recall': 0.9740091908954378, 'test_precision': 0.8379148646088076, 'test_f1': 0.9006809500556289}\n"
      ]
     }
    ],
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "id": "84c02451",
    "metadata": {},
    "outputs": [
@@ -374,7 +374,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'fit_time': 0.21490955352783203, 'score_time': 0.006186628341674804, 'test_accuracy': 0.7773484216726246, 'test_recall': 0.8964390226355027, 'test_precision': 0.8340112083501449, 'test_f1': 0.858302243613195}\n"
+      "{'fit_time': 0.11643636226654053, 'score_time': 0.005671906471252442, 'test_accuracy': 0.8238481679972477, 'test_recall': 0.9833019775713374, 'test_precision': 0.8295263612040742, 'test_f1': 0.8996449885800214}\n"
      ]
     }
    ],
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "id": "42f257f6",
    "metadata": {},
    "outputs": [
@@ -397,7 +397,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'fit_time': 1.3908843040466308, 'score_time': 0.32463779449462893, 'test_accuracy': 0.7736111710471836, 'test_recall': 0.9038472260942292, 'test_precision': 0.8253251003826223, 'test_f1': 0.8556666451404447}\n"
+      "{'fit_time': 1.0578321456909179, 'score_time': 0.184501576423645, 'test_accuracy': 0.8219385464109307, 'test_recall': 0.9834917308920204, 'test_precision': 0.8278420410853979, 'test_f1': 0.8985333707407328}\n"
      ]
     }
    ],
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "id": "a3ca4427",
    "metadata": {},
    "outputs": [
@@ -429,7 +429,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'fit_time': 2.338610363006592, 'score_time': 0.10221223831176758, 'test_accuracy': 0.79575493209081, 'test_recall': 0.9072497459463836, 'test_precision': 0.8469307101049918, 'test_f1': 0.8718051029604112}\n"
+      "{'fit_time': 2.224859666824341, 'score_time': 0.09786548614501953, 'test_accuracy': 0.8268271916677845, 'test_recall': 0.9751477108195366, 'test_precision': 0.8368362697610324, 'test_f1': 0.9005090862083769}\n"
      ]
     }
    ],
